deployments/kubernetes/ship-app-kafka/normaliser-event-notification.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: normaliser-event-notification
  namespace: ship-app-kafka
  annotations:
    "sidecar.jaegertracing.io/inject": "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      component: normaliser-event-notification
  template:
    metadata:
      labels:
        component: normaliser-event-notification
    spec:
      volumes:
        - name: google-cloud-key
          secret:
            secretName: google-cloud-key
      serviceAccountName: normaliser-event-notification
      containers:
        - name: normaliser
          image: eu.gcr.io/mhaddon/normaliser-event-notification:v3
          resources:
            limits:
              cpu: "100m"
              memory: 256Mi
            requests:
              cpu: "50m"
              memory: 64Mi
          ports:
            - containerPort: 8080
        - name: connector
          image: eu.gcr.io/mhaddon/pubsub-connector-sidecar:v4
          resources:
            limits:
              cpu: "100m"
              memory: 256Mi
            requests:
              cpu: "50m"
              memory: 64Mi
          volumeMounts:
            - name: google-cloud-key
              mountPath: /var/secrets/google
