deployments/kubernetes/ship-app-kafka/ship-event-add-notification.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ship-event-add-notification
  namespace: ship-app-kafka
  annotations:
    "sidecar.jaegertracing.io/inject": "true"
  labels:
    access-ship-store-mongodb: "1"
spec:
  replicas: 1
  selector:
    matchLabels:
      component: ship-event-add-notification
  template:
    metadata:
      labels:
        component: ship-event-add-notification
        access-ship-store-mongodb: "1"
    spec:
      volumes:
        - name: google-cloud-key
          secret:
            secretName: google-cloud-key
      serviceAccountName: ship-event-add-notification
      containers:
        - name: normaliser
          image: eu.gcr.io/mhaddon/ship-event-add-notification:v2
          resources:
            limits:
              cpu: "100m"
              memory: 256Mi
            requests:
              cpu: "50m"
              memory: 64Mi
          ports:
            - containerPort: 8080
        - name: connector
          image: eu.gcr.io/mhaddon/pubsub-connector-sidecar:v4
          resources:
            limits:
              cpu: "100m"
              memory: 256Mi
            requests:
              cpu: "50m"
              memory: 64Mi
          volumeMounts:
            - name: google-cloud-key
              mountPath: /var/secrets/google
