deployments/kubernetes/ship-app-kafka/gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: tiwio-gateway
  namespace: ship-app-kafka
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "tiw.io"
        - "*.tiw.io"
