deployments/kubernetes/ship-app-kafka/ship-request-api.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ship-request-api
  namespace: ship-app-kafka
  labels:
    access-ship-store-mongodb: "1"
spec:
  replicas: 1
  selector:
    matchLabels:
      component: ship-request-api
  template:
    metadata:
      labels:
        access-ship-store-mongodb: "1"
        component: ship-request-api
    spec:
      serviceAccountName: ship-request-api
      containers:
        - name: ship-request-api
          image: eu.gcr.io/mhaddon/ship-request-api:v2
          resources:
            limits:
              cpu: "100m"
              memory: 256Mi
            requests:
              cpu: "50m"
              memory: 64Mi
          ports:
            - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: ship-request-api
  namespace: ship-app-kafka
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    component: ship-request-api
  type: ClusterIP

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ship-request-api
  namespace: ship-app-kafka
spec:
  hosts:
    - "ship.tiw.io"
  gateways:
    - tiwio-gateway
  http:
    - route:
        - destination:
            host: ship-request-api
            port:
              number: 80
      corsPolicy:
          allowOrigin:
            - "*"
          allowMethods:
            - PUT
            - GET
            - OPTIONS
          allowCredentials: true
          allowHeaders:
            - Access-Control-Request-Method
            - X-Requested-With
            - Content-Type
            - authorization
          maxAge: "24h"
