deployments/kubernetes/ship-app-kafka/ship-request-frontend.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ship-request-frontend
  namespace: ship-app-kafka
  annotations:
    "sidecar.jaegertracing.io/inject": "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      component: ship-request-frontend
  template:
    metadata:
      labels:
        component: ship-request-frontend
    spec:
      serviceAccountName: ship-request-frontend
      containers:
        - name: ship-request-frontend
          image: eu.gcr.io/mhaddon/ship-request-frontend:v9
          resources:
            limits:
              cpu: "100m"
              memory: 256Mi
            requests:
              cpu: "50m"
              memory: 64Mi
          ports:
            - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: ship-request-frontend
  namespace: ship-app-kafka
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    component: ship-request-frontend
  type: ClusterIP

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ship-request-frontend
  namespace: ship-app-kafka
spec:
  hosts:
    - "tiw.io"
  gateways:
    - tiwio-gateway
  http:
    - route:
        - destination:
            host: ship-request-frontend
            port:
              number: 80
